# hyperparameter_optimizer

./: .gitignore  environment.yml  main.py  pyproject.toml
notebooks/: demo.ipynb  eda.ipynb
src/: Untitled-1.ipynb  environment.yml  hyperparam_gui_test_nb.ipynb  hyperparam_gui_test_nb_122024.ipynb  model_inference_test_nb copy.ipynb  model_inference_test_nb_03112025.ipynb
src/hyperparameter_optimizer/loss_functions/: __init__.py  base.py  binary_cross_entropy.py  factory.py  mean_squared_error.py
src/hyperparameter_optimizer/models/: base_models.py  bayesian_models.py  clustering_models.py  ensemble_models.py  knn_models.py  linear_models.py  svm_models.py  unsupervised_base_models.py
src/hyperparameter_optimizer/optimizers/: bayesian.py  darts.py  darts_en.py  grid_search.py  random_search.py
src/utils/: data_loader.py
tests/: custom_loss_test.ipynb
